corrections to css service section now visible

--- a/css/main.css
+++ b/css/main.css
@@ -68,9 +68,9 @@
 
 
 .feds-service{
-    max-width: 30px;
-    width: 30px;
-    margin: 1.5px 12px 1.5px 10px;  
+    max-width: 30%;
+    width: 30%;
+    margin: 1.5% 12% 1.5% 10%;  
 }
 
 .feds-servicesection{
@@ -103,7 +103,7 @@
 
 .feds-review{
     background: burlywood;
-    padding-bottom: 5px;
+    padding-bottom: 5%;
 }
 
 .feds-review::after{
@@ -114,13 +114,13 @@
 
 .feds-revcontineous{
     float: left;
-    padding-left: 5px;
-    max-width: 65px;
+    padding-left: 5%;
+    max-width: 65%;
 }
 
 
 .feds-revcontineous .b{
-    padding: 3px 0 3px 5px;
+    padding: 3% 0 3% 5%;
     font-size: 2vw;
     font-weight: bolder;
 }
@@ -131,18 +131,18 @@
 }
 
 .feds-review{
-    padding:3px 0 0px 5px;
+    padding:3% 0 0% 5%;
     max-width: 70px;
 
 }
 
 .feds-stars {
     display: block;
-    padding-left: 5px;
+    padding-left: 5%;
 
 }
 
 .feds-stars img {
-    width: 5px;
+    width: 5%;
     height: auto;
 }
